<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version">1.0</string>
    <string name="app_name">DXBProtocol</string>
    <string name="settings">Settings</string>
    <string name="about_the_app">About the App</string>
    <string name="coach_marks">Coach Marks</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="sms_code">SMS Code</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="pa_information">PA Information</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="local_number">Local Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="main_number">Main Number</string>
    <string name="fax_number">Fax Number</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="dress_code">Dress Code</string>
    <string name="note">Note</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="search_events">Search Events</string>
    <string name="invitation_list">Invitation List</string>

</resources>