<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/tab_bg_gradient"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitation_list"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/app_white_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <SearchView
                    android:id="@+id/searchViewEvents"
                    style="@style/rounded_searchtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:queryHint="@string/search_events" >
                </SearchView>

                <LinearLayout
                    android:id="@+id/eventstab"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="top|center_horizontal"
                    android:orientation="horizontal" >

                    <com.android.dxbprotocol.classes.SegmentedRadioGroup
                        android:id="@+id/segmentExploreType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checkedButton="@+id/btnExploreAll"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radioButtonUpcoming"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:minHeight="40dip"
                            android:minWidth="80dip"
                            android:text="@string/upcoming"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/radioButtonPast"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:button="@null"
                            android:gravity="center"
                            android:minHeight="40dip"
                            android:minWidth="80dip"
                            android:text="@string/past"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/white" />
                    </com.android.dxbprotocol.classes.SegmentedRadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/linearEvents"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/login_button_bg"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tab_bg_gradient"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linearHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/tab_border"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAccountUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/tab_border"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/event" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/tab_border"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/settings" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>